--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<link rel="icon" type="image/x-icon" href="C36F30F9-08E5-4C52-B82D-06C678E1AD6A.jpeg
+
+">
+
 </head>
 <body>
 <!-- partial:index.partial.html -->
